# SomnacinDumper

./: .gitignore
Payloads/ABL0_C02/: Makefile  linkerScript.ld  main.c  makecomp.py  run.sh  start.S
Payloads/EL3Payload_C02/: Makefile  arm32_aeabi_divmod.c  arm32_aeabi_ldivmod.c  linkerScript.ld  main.c  printf.c  printf.h  run.sh  start.S  utils.c  utils.h
PicoModchip/: CMakeLists.txt
PicoModchip/include/: postcode.h  spihack.h
PicoModchip/pio/: postcode.pio  spi_inject.pio  spi_reader.pio  spi_trigger.pio
PicoModchip/src/: main.c  postcode.c  spihack.c
